--- a/android/TestProtobufClient/app/src/main/res/layout/activity_main.xml
+++ b/android/TestProtobufClient/app/src/main/res/layout/activity_main.xml
@@ -32,8 +32,9 @@
     <ListView
         android:id="@+id/listViewContacts"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_marginTop="20dp"
+        android:layout_marginVertical="70dp"
         app:layout_constraintEnd_toStartOf="@+id/guideline2"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
