--- a/android/TestProtobufClient/app/src/main/res/layout/view_contact.xml
+++ b/android/TestProtobufClient/app/src/main/res/layout/view_contact.xml
@@ -29,5 +29,13 @@
             android:layout_weight="1"
             android:layout_marginLeft="15dp"
             android:text="Email" />
+
+        <TextView
+            android:id="@+id/textViewAge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginLeft="15dp"
+            android:text="Age" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
